# ROS2-workspace

./: README.md
install/: local_setup.sh  setup.sh
install/my_pkg/lib/my_pkg/: welcome_node
install/my_pkg/share/ament_index/resource_index/package_run_dependencies/: my_pkg
install/my_pkg/share/ament_index/resource_index/parent_prefix_path/: my_pkg
install/my_pkg/share/my_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_pkg/share/my_pkg/cmake/: my_pkgConfig-version.cmake  my_pkgConfig.cmake
install/my_pkg/share/my_pkg/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build  latest_list
src/my_pkg/: CMakeLists.txt
src/my_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/my_pkg/install/my_pkg/install/: local_setup.sh  setup.sh  setup.zsh
src/my_pkg/install/my_pkg/log/: latest_build
src/my_pkg/install/my_pkg/share/my_pkg/: package.sh
src/my_pkg/log/: latest_build
src/my_pkg/src/: simple_welcome_node  simple_welcome_node.cpp
